<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/main_activity_dialog_text_margin"
            android:textSize="@dimen/main_activity_dialog_font_size"
            android:text="@string/main_activity_dialog_action"
            />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:ms_thickness="0dp"
            app:ms_enableFloatingLabel="false"
            app:ms_enableErrorLabel="false"
            app:ms_arrowSize="@dimen/main_activity_dialog_spinner_arrow_size"
            app:ms_arrowColor="@color/colorPrimary"
            app:ms_alignLabels="false"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/icCheckboxText"
            android:layout_width="@dimen/main_activity_dialog_checkbox_size"
            android:layout_height="@dimen/main_activity_dialog_checkbox_size"
            android:background="@drawable/selector_checkbox"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/main_activity_dialog_text_margin"
            android:textSize="@dimen/main_activity_dialog_font_size"
            android:text="@string/main_activity_dialog_word_to_add_on_button"
            />

        <LinearLayout
            android:id="@+id/llTextParamKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etParamKeyWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_activity_dialog_font_size"
                android:hint="@string/main_activity_word_to_add_hint"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/icCheckboxIcon"
            android:layout_width="@dimen/main_activity_dialog_checkbox_size"
            android:layout_height="@dimen/main_activity_dialog_checkbox_size"
            android:background="@drawable/selector_checkbox"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/main_activity_dialog_text_margin"
            android:text="@string/main_activity_dialog_choose_icon"
            android:textSize="@dimen/main_activity_dialog_font_size" />

        <LinearLayout
            android:id="@+id/llIconParam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollIconView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <LinearLayout
                    android:id="@+id/llIconView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>